--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,3 +17,10 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
+
+#stats div {
+  bottom: 0 !important;
+  right: 0 !important;
+  top: auto !important;
+  left: auto !important;
+}
