--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,10 @@ body {
 
 canvas {
   background: black;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
 
 a {
