--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,8 @@ canvas {
   image-rendering: pixelated;
   image-rendering: crisp-edges;
   */
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -30,4 +32,14 @@ a {
   right: 0 !important;
   top: auto !important;
   left: auto !important;
+}
+
+#elm-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#pixi {
+  position: absolute;
 }
